--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #f0f0f0;
 }
 
-.App-link {
-  color: #61dafb;
+.counter-area {
+  margin-top: 4rem;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+button {
+  background-color: #61DAFB;
+  width: 5rem;
+  height: 5rem;
+  font-size: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  transition: 300ms;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #4fb0ca;
+}
+
+button:active {
+  box-shadow: 0 0 0 10px #61DAFB;
+}
+
+.center-decrement {
+  align-items: baseline;
+}
+
+.counter-value {
+  font-size: 4rem;
+  font-weight: bold;
+  width: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.change {
+  font-size: 2rem;
+  position: absolute;
+  top: -20px;
+  opacity: 0;
+}
+
+.change-effect {
+  font-size: 2rem;
+  position: absolute;
+  top: -20px;
+  opacity: 0;
+  animation: change-number-effect 300ms ease-out forwards;
+}
+
+@keyframes change-number-effect {
   to {
-    transform: rotate(360deg);
+    top: -50px;
+    opacity: initial;
   }
 }
